# alibabacloud-hologres-connectors

./: .gitignore  README.md  pom.xml
holo-chatbot/: .gitignore  README.md  chatbot.py  dingding_server.py  generate_config.py  utils.py
holo-chatbot-webui/: README.md  args.py  main.py  requirements.txt  webui.py
holo-chatbot-webui/html/: footer.html
holo-chatbot-webui/modules/: CustomLLM.py  LLMService.py  UI.py  VectorDB.py
holo-chatbot/config/: config.yaml.example  prompt.txt
holo-chatbot/data/: example_data.csv
holo-client/: .gitignore  LICENSE  README.md  pom.xml  testng.xml
holo-client-c/: CMakeLists.txt  Readme.md
holo-client-c/include/: holo_client.h  holo_config.h  logger.h  record.h  request.h  table_schema.h
holo-client-c/src/: action.c  action.h  batch.c  batch.h  connection_holder.c  connection_holder.h  direct_collector.c  direct_collector.h  exception.c  exception.h  future.c  future.h  get_collector.c  get_collector.h  holo_client.c  holo_client_private.h  holo_config.c  holo_config_private.h  ilist.h  keywords.c  keywords.h  kwlist.h  log4crc  logger.c  logger.h  logger_log4c.c  logger_log4c.h  logger_private.h  lp_map.c  lp_map.h  meta_cache.c  meta_cache.h  metrics.c  metrics.h  mutation_collector.c  mutation_collector.h  mutation_map.c  mutation_map.h  record.c  record_private.h  (+12 more)
holo-client-c/test/: Makefile  log4crc  testDataType.c  testFunctions.c  testHoloClient.c  testMultiThread.c  testPerformance.c  unit_test.c
holo-client-docs/: README.md
holo-client-go/: Readme.md  example.go  go.mod  log4crc
holo-client-go/holo-client/: holo_client.go  holo_config.go  request.go
holo-client-go/holo-client/include/: defs.h  holo_client.h  holo_config.h  record.h  table_schema.h  worker_pool.h
holo-client/src/: saveVersion.sh
holo-client/src/main/proto/: ServiceContract.proto
holo-client/tools/maven/: checkstyle.xml  scalastyle-config.xml  spotbugs-exclude.xml  suppressions-optimizer.xml  suppressions.xml
holo-e2e-performance-tool/: README.md  pom.xml
holo-llm/: README.md  main.py
holo-llm-deepseek/: README.md  main.py  requirements.txt
holo-llm-deepseek/config/: config.json
holo-llm-deepseek/data/: example.csv
holo-llm/config/: config.json
holo-llm/data/: example.csv
holo-shipper/: .gitignore  README.md  ReleaseNote.md  dependency-reduced-pom.xml  pom.xml
holo-utils/find-incompatible-flink-jobs/: README.md  pom.xml
hologres-connector-datax-writer/: README.md  pom.xml
hologres-connector-example/: README.md  pom.xml
hologres-connector-examples/: README.md  pom.xml
hologres-connector-examples/hologres-connector-flink-examples/: README.md  pom.xml
hologres-connector-examples/hologres-connector-flink-ordergen/: README.md  pom.xml
hologres-connector-examples/hologres-connector-spark-examples/: README.md  pom.xml
hologres-connector-flink/: pom.xml
hologres-connector-flink-1.11/: README.md  pom.xml
hologres-connector-flink-1.12/: README.md  pom.xml
hologres-connector-flink-1.13/: README.md  pom.xml
hologres-connector-flink-1.14/: README.md  pom.xml
hologres-connector-flink-1.15/: README.md  pom.xml
hologres-connector-flink-1.17/: README.md  pom.xml
hologres-connector-flink-1.19/: README.md  pom.xml
hologres-connector-flink-base/: README.md  pom.xml
hologres-connector-hive-2.x/: README.md  pom.xml
hologres-connector-hive-3.x/: README.md  pom.xml
hologres-connector-hive-base/: pom.xml
hologres-connector-kafka/: README.md  pom.xml
hologres-connector-spark-2.x/: README.md  pom.xml
hologres-connector-spark-3.x/: README.md  pom.xml
hologres-connector-spark-base/: README.md  pom.xml
hologres-connector-spark-base/hologres-connector-datax-writer/: README.md
hologres-connector-spark-base/hologres-connector-examples/: README.md
hologres-connector-spark-base/hologres-connector-examples/hologres-connector-flink-examples/: README.md  pom.xml
hologres-connector-spark-base/hologres-connector-examples/hologres-connector-spark-examples/: README.md
hologres-connector-spark-base/hologres-connector-flink-1.15/: README.md  pom.xml
hologres-connector-spark-base/hologres-connector-flink-1.17/: pom.xml
hologres-connector-spark-base/hologres-connector-flink-base/: README.md
hologres-connector-spark-base/hologres-connector-hive-3.x/: README.md  pom.xml
hologres-connector-spark-base/hologres-connector-hive-base/: README.md  pom.xml
hologres-connector-spark-base/hologres-connector-kafka/: README.md  pom.xml
hologres-connector-spark-base/hologres-connector-spark-2.x/: README.md  pom.xml
hologres-connector-spark-base/hologres-connector-spark-3.x/: pom.xml
tools/maven/: checkstyle.xml  scalastyle-config.xml  suppressions-core.xml  suppressions-runtime.xml
(+644 files in other folders)
